# TSAI-ERA-S3-Gemini-Web-App

./: .gitignore  LICENSE  README.md  main.py  prompts.md  pyproject.toml  system_prompt.txt
templates/: index.html
