[project]
name = "cnn-trainer-app"
version = "0.1.0"
description = "AI-powered CNN learning assistant web app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0"
]
